--- a/src/app/components/perfil/perfil.component.css
+++ b/src/app/components/perfil/perfil.component.css
@@ -1,84 +1,3 @@
-/*orm {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-width: 2px;
-    box-shadow: none;
-}
-
-.cont-perfil {
-    width: 100%;
-    height: 220px;
-}
-
-.bloque-izq {
-    padding-top: 10px;
-    width: 50%;
-    height: 200px;
-    float: left;
-}
-
-.bloque-der {
-    padding-top: 10px;
-    width: 50%;
-    height: 200px;
-    float: right;
-}*/
-/************CONTRASEÑA************/
-/*
-.cambioPass {
-  margin-left: 20px;
-}
-
-.cont-pass {
-  margin-top: 300px;
-}
-
-label {
-    margin-left: 15%;
-    display: inline-block;
-    width: 80px;
-}
-
-input[type="text"],
-input[type="email"] {
-    width: 50%;
-    margin: 20px auto;
-    height: 35px;
-    border: none;
-    color: #fff;
-    font-size: 16px;
-    padding-left: 3px;
-    align-content: center;
-    border-radius: 3px;
-    border: 1px solid rgba(168, 168, 168, 0.877);
-}
-*/
-
-/*Boton*/
-/*
-.bloque-izq button[type="submit"] {
-    width: 40%;
-    align-content: center;
-    display: block;
-    margin: auto;
-    margin-top: 10px;
-    height: 40px;
-    border: none;
-    color: #fff;
-    font-size: 18px;
-    border-radius: 3px;
-    background-color: rgb(39, 124, 39);
-    
-}
-
-.bloque-izq button[type="submit"]:hover {
-    background: #228B22;
-    ;
-    color: #fff;
-}
-*/
 
 
 .form-control{
@@ -90,6 +9,13 @@ input[type="email"] {
 
 }
 
+.form-control:focus{
+    border-color: #228B22;
+    border-width: 2px;
+    box-shadow: none;
+  }
+  
+  
 /*h5{
     vertical-align: middle;
     margin-left: 35%;
