--- a/src/app/components/vistaAcreedores/acreedores.component.html
+++ b/src/app/components/vistaAcreedores/acreedores.component.html
@@ -39,7 +39,7 @@
 
   <!--<h1><b>Acreedores</b></h1>-->
 <div class="card-body text-secondary">
-    <h5 class="card-title">Listado de Acreedores</h5>
+    <h1 class="card-title text-center">Acreedores</h1>
 
     <div class="my-3">
       <button class="btn btn-rounded btn btn-success" types="button" [routerLink] = "['/acreedores/form-acreedores.component']">Nuevo Acreedor</button>
@@ -62,10 +62,14 @@
           <td>{{ acreedor.nif }}</td>
           <td>{{ acreedor.iban }}</td>
           <td>
-            <button type="button" class="btn btn-success" name="button" [routerLink]="['/acreedores/form-acreedores.component', acreedor.nif]">Editar</button>
+            <button type="button" class="btn btn-link" name="button" [routerLink]="['/acreedores/form-acreedores.component', acreedor.nif]">
+              <img src="assets/iconos/editar.png" class="rounded" alt="Editar Acreedor">
+            </button>
           </td>
           <td>
-            <button type="button" class="btn btn-danger" name="button" (click)='delete(acreedor)' >Borrar</button>
+            <button type="button" class="btn btn-link" name="button" (click)='delete(acreedor)' >
+              <img src="assets/iconos/papelera.png" class="rounded" alt="Eliminar Proyecto">
+            </button>
           </td>
         </tr>
       </tbody>
